--- a/package.json
+++ b/package.json
@@ -1,6 +1,11 @@
 {
   "name": "iobroker.chargepoint",
-  "version": "0.0.6",
+  "version": "0.0.1",
+  "description": "ChargePoint adapter",
   "main": "main.js",
-  "license": "MIT"
+  "author": "Thomas",
+  "license": "MIT",
+  "dependencies": {
+    "axios": "^1.6.0"
+  }
 }
