--- a/admin/jsonConfig.json
+++ b/admin/jsonConfig.json
@@ -8,9 +8,9 @@
         "interval": {
           "type": "number",
           "label": "Abrufintervall (Minuten)",
+          "default": 10,
           "min": 1,
-          "max": 1440,
-          "default": 10
+          "max": 1440
         }
       }
     },
